objects/LLC_BI__Authorized_User__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Administrator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administrator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Authorized_Signer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authorized Signer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Check_Issuance_Parameters_Teller_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check Issuance Parameters: Teller Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_Name__c</fullName>
        <defaultValue>$User.FirstName +  &apos; &apos; + $User.LastName</defaultValue>
        <description>--DEPRECATED--
The authorized user&apos;s contact name.</description>
        <label>-D Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Reference</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Authorized User</relationshipLabel>
        <relationshipName>Authorized_User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_Title__c</fullName>
        <defaultValue>$User.Title</defaultValue>
        <description>--DEPRECATED--
The authorized user&apos;s contact&apos;s title.</description>
        <label>-D Contact Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_for_Exception_Images_and_Conting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact for Exception Images and Conting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Contact_for_Exception_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contact for Exception Pricing and Contingency Procedures</description>
        <label>Contact for Exception Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Cancel</fullName>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Revise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Technical_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Of the list of Authorized Users please check if this is the Technical Contact</description>
        <label>Technical Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service_Product__c</fullName>
        <formula>LLC_BI__Treasury_Service__r.LLC_BI__Product_Reference__r.Name</formula>
        <label>Treasury Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Authorized Users</relationshipLabel>
        <relationshipName>Authorized_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WKDDP__Alternate_Signature_Description__c</fullName>
        <description>Users populate this optional text field that provides a description of the alternate text to print under a signature line for this signer. This is used if something other than the signer&apos;s name should print under the signature line.</description>
        <inlineHelpText>Enter the description of the alternate text to print under a signature line for this user, which is used when something other than the signer&apos;s name.</inlineHelpText>
        <label>Alternate Signature Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WKDDP__Relationship_Description__c</fullName>
        <description>Administrators enter a description of the relationship between the signer and the account.</description>
        <inlineHelpText>Enter a description of the relationship between the signer and the account.</inlineHelpText>
        <label>Relationship Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Authorized User</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AU-{00000000}</displayFormat>
        <label>Authorized User Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized User</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>